--- a/styles.css
+++ b/styles.css
@@ -145,23 +145,29 @@ body {
   height: 100%;
 }
 
+main {
+  height: 100%;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 main header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: aliceblue;
 }
 main header h1 {
-  font-size: 32px;
-  margin: 30px;
+  font-size: 2rem;
+  margin: 1.875rem;
 }
 main header p {
-  font-size: 26px;
-  margin: 30px;
+  font-size: 1.625rem;
+  margin: 1.875rem;
   line-height: 1.4;
 }
 main .push-container h3 {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 main .push-container input {
   font-family: inherit;
