--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,20 +9,23 @@ main {
   flex-direction: column;
   justify-content: space-around;
   header {
+    margin: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     h1 {
       font-size: rem(32);
-      margin: rem(30);
+      padding: 30px;
     }
     p {
       font-size: rem(26);
-      margin: rem(30);
-      line-height: 1.4;
+      line-height: 1.5;
+      padding: 20px;
     }
   }
-
+  section {
+    margin: 40px;
+  }
   .push-container {
     h3 {
       font-size: rem(24);
