--- a/styles.css
+++ b/styles.css
@@ -153,18 +153,22 @@ main {
   justify-content: space-around;
 }
 main header {
+  margin: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 main header h1 {
   font-size: 2rem;
-  margin: 1.875rem;
+  padding: 30px;
 }
 main header p {
   font-size: 1.625rem;
-  margin: 1.875rem;
-  line-height: 1.4;
+  line-height: 1.5;
+  padding: 20px;
+}
+main section {
+  margin: 40px;
 }
 main .push-container h3 {
   font-size: 1.5rem;
