--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -23,19 +23,41 @@ main {
       padding: 20px;
     }
   }
+
   section {
     margin: 40px;
   }
+
   .push-container {
     h3 {
+      padding: 20px;
       font-size: rem(24);
+    }
+    label {
+      padding: 20px;
     }
     input {
       font-family: inherit;
+      padding: 20px;
     }
 
     button {
       font-family: inherit;
+      padding: 10px;
+    }
+
+    div {
+      p {
+        padding: 20px;
+        font-size: rem(16);
+      }
+      ol {
+        li {
+          padding-left: 20px;
+          padding-bottom: 10px;
+          font-size: rem(16);
+        }
+      }
     }
   }
 }
