--- a/styles.css
+++ b/styles.css
@@ -171,13 +171,28 @@ main section {
   margin: 40px;
 }
 main .push-container h3 {
+  padding: 20px;
   font-size: 1.5rem;
+}
+main .push-container label {
+  padding: 20px;
 }
 main .push-container input {
   font-family: inherit;
+  padding: 20px;
 }
 main .push-container button {
   font-family: inherit;
+  padding: 10px;
+}
+main .push-container div p {
+  padding: 20px;
+  font-size: 1rem;
+}
+main .push-container div ol li {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 1rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
