--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -90,6 +90,8 @@ main {
         font-size: rem(16);
       }
       ol {
+        display: flex;
+        justify-content: center;
         li {
           padding-left: 20px;
           padding-bottom: 10px;
@@ -124,6 +126,8 @@ main {
         font-size: rem(16);
       }
       ol {
+        display: flex;
+        justify-content: center;
         li {
           padding-left: 20px;
           padding-bottom: 10px;
