--- a/styles.css
+++ b/styles.css
@@ -219,6 +219,10 @@ main .pop-container div p {
   padding: 20px;
   font-size: 1rem;
 }
+main .pop-container div ol {
+  display: flex;
+  justify-content: center;
+}
 main .pop-container div ol li {
   padding-left: 20px;
   padding-bottom: 10px;
@@ -243,6 +247,10 @@ main .unshift-container button {
 main .unshift-container div p {
   padding: 20px;
   font-size: 1rem;
+}
+main .unshift-container div ol {
+  display: flex;
+  justify-content: center;
 }
 main .unshift-container div ol li {
   padding-left: 20px;
