Add unshift html and styles

--- a/styles.css
+++ b/styles.css
@@ -257,5 +257,34 @@ main .unshift-container div ol li {
   padding-bottom: 10px;
   font-size: 1rem;
 }
+main .shift-container h3 {
+  padding: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+main .shift-container label {
+  padding: 20px;
+}
+main .shift-container input {
+  font-family: inherit;
+  padding: 10px;
+}
+main .shift-container button {
+  font-family: inherit;
+  padding: 10px;
+}
+main .shift-container div p {
+  padding: 20px;
+  font-size: 1rem;
+}
+main .shift-container div ol {
+  display: flex;
+  justify-content: center;
+}
+main .shift-container div ol li {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 1rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
