--- a/styles.css
+++ b/styles.css
@@ -344,5 +344,34 @@ main .every-container div ol li {
   padding-bottom: 10px;
   font-size: 1rem;
 }
+main .find-container h3 {
+  padding: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+main .find-container label {
+  padding: 20px;
+}
+main .find-container input {
+  font-family: inherit;
+  padding: 10px;
+}
+main .find-container button {
+  font-family: inherit;
+  padding: 10px;
+}
+main .find-container div p {
+  padding: 20px;
+  font-size: 1rem;
+}
+main .find-container div ol {
+  display: flex;
+  justify-content: center;
+}
+main .find-container div ol li {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 1rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
