Add new map styles

--- a/styles.css
+++ b/styles.css
@@ -402,5 +402,34 @@ main .filter-container div ol li {
   padding-bottom: 10px;
   font-size: 1rem;
 }
+main .map-container h3 {
+  padding: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+main .map-container label {
+  padding: 20px;
+}
+main .map-container input {
+  font-family: inherit;
+  padding: 10px;
+}
+main .map-container button {
+  font-family: inherit;
+  padding: 10px;
+}
+main .map-container div p {
+  padding: 20px;
+  font-size: 1rem;
+}
+main .map-container div ol {
+  display: flex;
+  justify-content: center;
+}
+main .map-container div ol li {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  font-size: 1rem;
+}
 
 /*# sourceMappingURL=styles.css.map */
